Fixed bug #44069 (Huge memory usage with concatenation using . instead of .=)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@252910 c90b9560-bf6c-de11-be94-00142212c4b1